--- a/lib/build_load_lib/CMakeLists.txt
+++ b/lib/build_load_lib/CMakeLists.txt
@@ -2,43 +2,19 @@ cmake_minimum_required(VERSION 3.16)
 project(BuildLoadLib)
 include(LibSources.cmake)
 
-set(ENV{CCACHE_SLOPPINESS} pch_defines,time_macros)
-
-option(AUTO_CCACHE "Use ccache to speed up rebuilds" ON)
-find_program(CCACHE_PROGRAM ccache)
-if(CCACHE_PROGRAM AND ${AUTO_CCACHE})
-  message(STATUS "Using ${CCACHE_PROGRAM} as compiler launcher")
-  set(CMAKE_CXX_COMPILER_LAUNCHER "${CCACHE_PROGRAM}")
-endif()
-
-option(BUILD_PROF "Use clang buid tracing for profiling" OFF)
-if(BUILD_PROF)
-    add_compile_options(-ftime-trace)
-endif(BUILD_PROF)
-
-# Check the build type and set compilation flags accordingly
-if(CMAKE_BUILD_TYPE STREQUAL "Release")
-    message("Release build")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
-elseif(CMAKE_BUILD_TYPE STREQUAL "Debug")
-    message("Debug build")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0 -g")
-else()
-    message(FATAL_ERROR "Unsupported build type: ${CMAKE_BUILD_TYPE}")
-endif()
-
+# Add library source files from LibSources.cmake
 add_library(${PROJECT_NAME} ${LIB_SOURCES})
-
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} include)
 set_target_properties(${PROJECT_NAME} PROPERTIES
     CXX_STANDARD 11
     CXX_STANDARD_REQUIRED ON
 )
 
-target_precompile_headers(${PROJECT_NAME} PRIVATE
+# Enable precompiled headers usage
+option(PCH_ENABLE "Use precompiled headers" ON)
+if(PCH_ENABLE)
+    target_precompile_headers(${PROJECT_NAME} PRIVATE
     "$<$<COMPILE_LANGUAGE:CXX>:<iostream$<ANGLE-R>>"
     "$<$<COMPILE_LANGUAGE:CXX>:<string$<ANGLE-R>>"
-)
-
-target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} include)
+    )
+endif(PCH_ENABLE)
